--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 <body>
     <a href="{{ url_for('index')}}">Home</a>
     <a href="{{ url_for('about')}}">About</a> |
-   <a href="{{ url_for('faverite_sport')}}">Faverite sport</a> |
+   <a href="{{ url_for('sport')}}">Faverite sport</a> |
     <a href="{{ url_for('faverite_song')}}">Faverite song</a> |
     
     <br>
