--- a/templates/movies.html
+++ b/templates/movies.html
@@ -9,8 +9,8 @@
     <hr>
 
     <ol>
-        {% for sport in sport %}
-            <li>{{sport}}</li>
+        {% for movie in movies %}
+            <li>{{movie}}</li>
         {% endfor %}
     </ol>
 {% endblock %}
