--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     <a href="{{ url_for('about')}}">About</a> |
    <a href="{{ url_for('sport')}}">Faverite sport</a> |
     <a href="{{ url_for('faverite_song')}}">Faverite song</a> |
+    <a href="{{ url_for('movies')}}">Movies</a>
     
     <br>
     {% block content %}{% endblock %}
