--- a/templates/faverite_song.html
+++ b/templates/faverite_song.html
@@ -1,11 +1,16 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-{{ title }}
+    {{ title }}
 {% endblock %}
 
 {% block content %}
+    <h1>{{title}}</h1>
+    <hr>
+
+    <ol>
         {% for song in song %}
-                <li>{{ song }}</li>
+            <li>{{song}}</li>
         {% endfor %}
+    </ol>
 {% endblock %}
